# ml-projects

./: .gitignore  Notebook_RIAUX_Adrien.ipynb  Projet_Apprentissage_Statistique.nb.html  README.md  pyproject.toml
Car performance project/: Car_Performance.ipynb  car_performance.csv
Car_performance_pj/: Notebook_RIAUX_Adrien.ipynb
Churn prediction/: Churn_Prediction.ipynb
Churn prediction project/: Churn_Prediction.ipynb
Diabetic retinopathy debrecen project/: Diabetic_Retinopathy_Debrecen.Rmd  Diabetic_Retinopathy_Debrecen.md
Heart disease project/: Heart_Disease.ipynb
House price project/: House_Price.Rmd  House_Price.md  house_price.csv
Spam email project/: Spam_Email.ipynb
Star classification project/: Star_Classification.ipynb
